<resources>
    <string name="app_name">Earn Money</string>
    <string name="app_tag">Spin &amp; Get Up to 1X to 5X Money</string>
    <string name="Term">Terms &amp; Condition</string>
    <string name="titles">titles</string>
    <string name="Privacy">Privacy Policy</string>
    <string name="Aa">We use your data to provide and improve Service. By using Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms of Service.</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="Ab">- Our Terms of Service (“Terms”) govern all use of our Service and together with the Privacy Policy constitutes your agreement with us (“Agreements”).</string>
    <string name="Information">Information Collection and Use</string>
    <string name="Ac">- We collect several information for various purposes to provide and improve our Service to you.</string>
    <string name="Ad">- We use the services provided by the third parties below. We encourage you to review the privacy policies and terms of these third parties.</string>
    <string name="strContactTerms">By Continuing, you have read and agree to Terms &amp; Condition And Privacy Policy</string>
    <string name="AgreeButton"><![CDATA[Agree & Continue]]></string>
    <string name="_1200">₹ 0</string>
    <string name="withdraw">withdraw</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="gpay">Google Pay</string>
    <string name="phone_pe">Phone Pay</string>
    <string name="paytm">Paytm</string>
    <string name="nav_mail">example@gmail.com</string>
    <string name="enter_phone_pe_number_upi_id">Enter Phone Pay Number/UPI ID</string>
    <string name="rupis">₹ </string>
    <string name="_20">₹ 20</string>
    <string name="spin_left"> 5 Spin Left</string>
    <string name="_50">₹ 50</string>
    <string name="_100">₹ 100</string>
    <string name="_500">₹ 500</string>
    <string name="play_now">Play Now</string>
    <string name="spinleft">Spin Left</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="message">Message</string>
    <string name="send">Submit</string>
    <string name="strContactUsLine1"> - Contact Us at  vimarshraiyani143@gmail.com  for more information or getting about payment issue.</string>
    <string name="strContactUsLine2"> - Our best customer executive getting reach you in short time.</string>
    <string name="login_with_google">Login with Google</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="todo">TODO</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="get_spin_now">Get Spin Now</string>
    <string name="wallet">Wallet</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up1">Don\'t Have an account? Sign Up</string>
    <string name="spin_point">Spin Point</string>
    <string name="log_out">Log Out</string>
    <string name="get_more_spin">Get More Spin</string>
    <string name="_0_discount">10% Discount</string>
    <string name="_1_discount">25% Discount</string>
    <string name="_2_discount">50% Discount</string>
    <string name="_3_discount">65% Discount</string>
    <string name="rs_50">RS. 50</string>
    <string name="congratulation">Congratulation</string>
    <string name="amount_will_be_added_to_your_winings">Amount will be added to your winings.</string>
    <string name="cancel">Cancel</string>
    <string name="collect_amount">Collect Amount</string>
    <string name="password">Enter Your Password</string>
    <string name="email">Enter Your Email</string>
    <string name="welcome">Welcome</string>
    <string name="Maintenance">We are working to improve your experience. Please check back later.</string>
    <string name="no_request_found">No Request Found</string>
    <string name="no_transaction_found">No Transaction Found</string>
</resources>