<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.kc.earn_money.Permission">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/background">

        <ImageView
            android:id="@+id/imgViewBack2"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:importantForAccessibility="no"
            android:padding="@dimen/_14sdp"
            android:src="@drawable/mme_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/semibold"
            android:gravity="center"
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:fontFamily="@font/regular"
                android:includeFontPadding="false"
                android:text="@string/Aa"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                tools:ignore="VisualLintLongText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/semibold"
                        android:includeFontPadding="false"
                        android:text="@string/terms_of_service"
                        android:textColor="@color/main_theme"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/regular"
                        android:includeFontPadding="false"
                        android:text="@string/Aa"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        tools:ignore="VisualLintLongText" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/semibold"
                        android:includeFontPadding="false"
                        android:text="@string/Information"
                        android:textColor="@color/main_theme"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/regular"
                        android:includeFontPadding="false"
                        android:text="@string/Ab"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        tools:ignore="VisualLintLongText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/regular"
                        android:includeFontPadding="false"
                        android:text="@string/Ac"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="16dp"
        android:gravity="center">

        <CheckBox
            android:id="@+id/simpleCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:fontFamily="@font/regular"
            android:gravity="left|center_vertical|center_horizontal|center"
            android:includeFontPadding="false"
            android:lineSpacingExtra="3dp"
            android:text="@string/strContactTerms"
            android:textColor="@color/black"
            android:textColorLink="#ff0000"
            android:textSize="@dimen/_11ssp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnAgree"
        style="@style/ButtonRoundedWhite"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/AgreeButton"
        android:textColor="#00838F" />

</LinearLayout>
